--- a/Bayesian_smoothing_JSS.Rmd
+++ b/Bayesian_smoothing_JSS.Rmd
@@ -33,7 +33,7 @@ author:
     affiliation: |
         | Nat Inst for Space Research
         | Brazil
-  - name: Pedro Ribeiro de Andrade
+  - name: Pedro R. Andrade
     orcid: 0000-0001-8675-4046
     affiliation: |
         | Nat Inst for Space Research
@@ -93,49 +93,68 @@ Sys.setenv("SITS_DOCUMENTATION_MODE" = "true")
 
 Image classification post-processing has been defined as \textit{"a refinement of the
 labelling in a classified image in order to enhance its classification accuracy"}
-\citep{Huang2014}. In remote sensing image analysis, these procedures are used
-to combine pixel-based classification methods with a spatial post-processing
+\citep{Huang2014}. In remote sensing image analysis, these procedures
+<!--
+% PEDRO: nao gosto do "these procedures", porque o pos-processamento e' uma etapa, e nao um conjunto de procedimentos
+-->
+combine pixel-based classification methods with a spatial post-processing
+<!--
+% PEDRO: aqui aparece post-processing novamente como sendo parte do pos-processamento
+-->
 method to remove outliers and misclassified pixels. For pixel-based classifiers,
-post-processing methods enable the inclusion of spatial information
+post-processing methods enable including spatial information
 in the final results.
 
+<!--
+% PEDRO: a primeira frase do paragrafo abaixo me parece desnecessaria, pois repete
+% um pouco o que esta na ultima
+-->
 Smoothing methods are an important complement to machine learning algorithms
 for image classification. Methods such as support vector machines
-\citep{Mountrakis2011}, random forests \citep{Belgiu2016} and
+\citep{Mountrakis2011}, random forests \citep{Belgiu2016}, and
 deep learning \citep{Ma2019} are becoming increasingly popular. Since these methods 
-are mostly pixel-based,it is useful to complement them with post-processing smoothing 
+are mostly pixel-based, it is useful to complement them with post-processing smoothing 
 to include spatial information in the result.
 
 A traditional choice for smoothing classified images is the majority filter, 
 where the class of the central pixel is replaced by the most frequent class of 
-the neighbourhood. This technique is rather simplistic; more sophisticated methods 
-use class probabilities. For each pixel, machine learning and other statistical 
+the neighborhood. This technique is rather simplistic; more sophisticated methods 
+use class probabilities. 
+<!--
+% PEDRO: este paragrafo esta com ordem meio invertida. A frase acima fala das
+% probabilidades, mas elas sao apresentadas apenas na frase abaixo
+-->
+For each pixel, machine learning and other statistical 
 algorithms provide the probabilities of that pixel belonging to each of the classes. 
 As a first step in obtaining a result, each pixel is assigned to the class whose 
 probability is higher. After this step, smoothing methods use class probabilities 
 to detect and correct outliers or misclassified pixels.
 
-Probability-based smoothing methods include Gaussian and edge-aware filtering \citep{Schindler2012}, modal filters \citep{Ghimire2010} and probabilistic relaxation 
-\citep{Gong1989}. \citet{Huang2014} propose a relearning method based on co-ocurrence 
+Probability-based smoothing methods include Gaussian and edge-aware filtering \citep{Schindler2012}, modal filters \citep{Ghimire2010}, and probabilistic relaxation 
+\citep{Gong1989}. \citet{Huang2014} propose a relearning method based on co-occurrence 
 matrices; these matrices represent the joint distribution of class labels in the 
 neighborhood of each pixel. In the current work, we introduce a Bayesian smoothing method, 
 which provides the means to incorporate prior knowledge in data analysis.
 
-Bayesian inference can be thought of as way of coherently updating our uncertainty in the 
-light of new evidence. It allows the inclusion of expert knowledge on the derivation of 
+Bayesian inference can be thought of as way of coherently update our uncertainty in the 
+light of new evidence. It can consider expert knowledge on the derivation of 
 probabilities. As stated by \citet{Spiegelhalter2009}: "In the Bayesian paradigm, degrees 
 of belief in states of nature are specified. Bayesian statistical methods start with 
 existing 'prior' beliefs, and update these using data to give 'posterior' beliefs, 
 which may be used as the basis for inferential decisions". 
 
 Bayesian smoothing methods have become an established technique for image restoration and reconstruction \citep{Hanson1993}. More recently, \citet{Wu2017} proposed a Bayesian 
-approach for soft fusion applied to change detection. However, to the best of our knowledge 
+approach for soft fusion applied to change detection. However, to the best of our knowledge, 
 this work is the first proposal to use Bayesian smoothing for post-processing of machine 
 learning pixel based classification.
 
-% TODO: include a paragraph about R packages following the style below
+<!--% TODO: include a paragraph about R packages following the style below
+% PEDRO: Duas sugestoes:
+% https://cran.r-project.org/web/packages/probably/ -> "Tools for Post-Processing Class Probability Estimates"
+% https://www.mdpi.com/2076-3417/12/24/12554 -> "R Libraries for Remote Sensing Data Classification by K-Means Clustering and NDVI Computation in Congo River Basin, DRC"
+-->
 In \proglang{R}, ...include here a discussion of what's available in R, and 
-include mention to the \pkg{sits} package
+include mention to the \pkg{sits} package.
 
 The \pkg{sits} package uses satellite image time series for land classification, using  
 a time-first, space-later approach \cite{Simoes2021}. In the data preparation part, 
@@ -153,33 +172,42 @@ The proposed post-classification smoothing model considers the output of a machi
 learning algorithm that provides the probabilities of each pixel in the image to belong 
 to target classes. More formally, let $p_{i,k}$ be the probability of pixel 
 $i$ belonging to class $k$, $k=1,\dots{},K$, then
+<!--
+% PEDRO: faltou dizer quem e' K
+-->
 
 \begin{equation}
 \sum_{k=1}^K p_{i,k} = 1, p_{i,k} > 0.
 \end{equation}
+<!--
+% PEDRO: esse p_{i,k} > 0 acho que ficaria melhor na frase acima: "let p_{i,k} > 0"
+E' p_{i,k} > 0 ou seria p_{i,k} >= 0?
+-->
 
-To more the inference tractable, the class probability values $p_{i,k}$ are converted to 
-log-odds values. The logit function converts probability values from 
-0 to 1 to values from $-\infty$ to $\infty$. The conversion from probabilities to logit 
-values is expressed by
+To make the inference tractable, the class probability values $p_{i,k}$ are converted to 
+log-odds values. The logit function converts probability values in the interval $[0,1]$ to logit values in  $[-\infty, \infty]$, expressed by
 
 \begin{equation}
-x_{i,k} = \ln \left(\frac{p_{i,k}}{1 - p_{i,k}}\right)
+x_{i,k} = \ln \left(\frac{p_{i,k}}{1 - p_{i,k}}\right).
 \end{equation}
 
 Confidence in pixel classification increases with logit. There are situations, such as 
 border pixels or mixed ones, where the logit of different classes are similar in magnitude. 
 These are cases of low confidence in the classification result. To assess and correct these 
-cases, the post-classification smoothing method borrows strength from the neighbours.
+cases, the post-classification smoothing method borrows strength from the neighbors.
 
 ## Bayesian inference
 
-After the transformation of probability values into logits, the problem can be expressed 
+After transforming probability values into logits, the problem can be expressed 
 in a Bayesian context. Suppose that $x\in{}X$ has a distribution 
 $\pi(x|\theta)$ with an unknown $\theta{}\in{}\Theta{}$ parameter. Consider two random 
-variables for each pixel $i$ and class$k$: (a) $x_{i,k}$, the observed class logits; 
+variables for each pixel $i$ and class $k$: (a) $x_{i,k}$, the observed class logits; 
 (b) $\mu_{i,k}$, the inferred logit values based on the observations. From the output of 
-the machine learning classification is $x_{i,k}$, the aim is to estimate the actual 
+the machine learning classification is $x_{i,k}$,
+<!--
+% PEDRO: nao entendi acima
+-->
+ the aim is to estimate the actual 
 values $\mu_{i,k} | x_{i,k}$. The Bayesian inference procedure can be expressed as
 
 \begin{equation}
@@ -194,7 +222,7 @@ For simplicity, independence between the different classes $k$ is assumed. There
 update will be performed for each class $k$ separately.
 
 The method assumes that the likelihood $x_{i,k} | \mu_{i,k}$ follows a normal 
-distribution $N(\mu_{i,k}, \sigma^2_{k})$ with parameters $\mu_{i,k}$ and $\sigma^2_{k}$. 
+distribution $N(\mu_{i,k}, \sigma^2_{k})$, with parameters $\mu_{i,k}$ and $\sigma^2_{k}$. 
 The variance $\sigma^2_{k}$ will be estimated based on user expertise and taken as 
 a hyperparameter to control the smoothness of the resulting estimate. Therefore
 
@@ -210,9 +238,9 @@ parameter $\mu_{i,k}$ with parameters $m_{i,k}$ and $s^2_{i,k}$:
 \end{equation}
 
 To calculate the prior, the method assumes that the class probabilities in the spatial
-neighbourhood of the pixel have the same distribution. Estimating the local means and variances 
-for the prior distribution considers a spatial neighbourhood $N_{i}$ close to pixel $p_i$. 
-Let $\#(N_{i})$ be the number of elements in the neighbourhood $N_{i}$. 
+neighborhood of the pixel have the same distribution. Estimating the local means and variances 
+for the prior distribution considers a spatial neighborhood $N_{i}$ close to pixel $p_i$. 
+Let $\#(N_{i})$ be the number of elements in the neighborhood $N_{i}$. 
 The mean value is given by
 
 \begin{equation}
@@ -230,7 +258,7 @@ ${E}[\mu_{i,k} | x_{i,k}]$ is given by:
 
 \begin{equation}
 {E}[\mu_{i,k} | x_{i,k}] = \frac{m_{i,t} \times \sigma^2_{k} +
-x_{i,k} \times s^2_{i,k}}{ \sigma^2_{k} +s^2_{i,k}}
+x_{i,k} \times s^2_{i,k}}{ \sigma^2_{k} +s^2_{i,k}},
 \end{equation}
 
 which can be expressed as a weighted mean
@@ -239,10 +267,10 @@ which can be expressed as a weighted mean
 {E}[\mu_{i,k} | x_{i,k}] =
 \Biggl [ \frac{s^2_{i,k}}{\sigma^2_{k} +s^2_{i,k}} \Biggr ] \times
 x_{i,k} +
-\Biggl [ \frac{\sigma^2_{k}}{\sigma^2_{k} +s^2_{i,k}} \Biggr ] \times m_{i,k}
+\Biggl [ \frac{\sigma^2_{k}}{\sigma^2_{k} +s^2_{i,k}} \Biggr ] \times m_{i,k},
 \end{equation}
 
-where
+where:
 
 \begin{itemize}
 \item $x_{i,k}$ is the logit value for pixel $i$ and class $k$.
@@ -251,13 +279,13 @@ in the neighborhood of pixel $i$.
 \item $s^2_{i,k}$ is the variance of logit values for pixels of class $k$ 
 in the neighborhood of pixel $i$.
 \item $\sigma^2_{k}$ is the likelihood variance for class $k$, 
-and is an user-derived hyperparameter.
+an user-derived hyperparameter.
 \end{itemize}
 
 The above equation is a weighted average between the value $x_{i,k}$ for the pixel 
-and the mean $m_{i,k}$ for the neighbouring pixels. When the variance $s^2_{i,k}$ for the 
-neighbours is too high, the algorithm gives more weight to the pixel value $x_{i,k}$. 
-When the variance of the likelihood $\sigma^2_k$ increases, the method gives more weight to the neighbourhood mean $m_{i,k}$.
+and the mean $m_{i,k}$ for the neighboring pixels. When the variance $s^2_{i,k}$ for the 
+neighbors is too high, the algorithm gives more weight to the pixel value $x_{i,k}$. 
+When the variance of the likelihood $\sigma^2_k$ increases, the method gives more weight to the neighborhood mean $m_{i,k}$.
 
 \newpage
 
@@ -265,7 +293,7 @@ When the variance of the likelihood $\sigma^2_k$ increases, the method gives mor
 
 The parameter $\sigma^2_k$ controls the level of smoothness. If $\sigma^2_k$ is zero, 
 the estimated value ${E}[\mu_{i,k} | x_{i,k}]$ will be the pixel value $x_{i,k}$. 
-Values of the likelihood variance $\sigma^2_{k}$, which are small relative to the prior variance $s^2_{i,k}$ increase our confidence in the original probabilities. Conversely, likelihood variances $\sigma^2_{k}$ which are large relative to the prior variance $s^2_{i,k}$ increase our confidence in the average probability of the neighbourhood.
+Values of the likelihood variance $\sigma^2_{k}$, which are small relative to the prior variance $s^2_{i,k}$ increase our confidence in the original probabilities. Conversely, likelihood variances $\sigma^2_{k}$, which are large relative to the prior variance $s^2_{i,k}$, increase our confidence in the average probability of the neighborhood.
 
 Thus, the parameter $\sigma^2_{k}$ expresses confidence in the inherent variability 
 of the distribution of values of a class $k$. The smaller the parameter $\sigma^2_{k}$, 
@@ -273,19 +301,19 @@ the more we trust the estimated probability values produced by the classifier fo
 Conversely, higher values of $\sigma^2_{k}$ indicate lower confidence in the classifier 
 outputs and improved confidence in the local average values.
 
-Consider the following two-class example. Take a pixel with probability 0.4 
-(logit $x_{i,1}$ = -0.4054) for class A, and probability 0.6 (logit $x_{i,2}$ = 0.4054) 
+Consider the following two-class example. Take a pixel with probability $0.4$ 
+(logit $x_{i,1} = -0.4054$) for class A, and probability $0.6$ (logit $x_{i,2} = 0.4054$) 
 for class B. Without post-processing, the pixel will be labelled as class B. Consider a 
-local average of 0.6 (logit $m_{i,1}$ = 0.4054) for class A and 0.4 
-(logit $m_{i,2}$ = -0.4054) for class B. This is an outlier classified as class B in the midst of a set of pixels of class A. Suppose a local variance of logits to be $s^2_{i,1}$ = 5 for class A and $s^2_{i,2}$ = 10 and for class B. This difference is to be expected if the local variability of class A is smaller than that of class B. To complete the estimate, we need to set the parameter $\sigma^2_{k}$, representing prior belief in the variability of the probability values for each class. If we take both  $\sigma^2_{A}$ for class A and $\sigma^2_{B}$ for class B to be both 10, the Bayesian  estimated probability for class A is 0.52  and for class B is 0.48. In this case, the pixel will be relabelled as being class A. If we set $\sigma^2$ to be 5 for both classes A and B, the Bayesian probability estimate will be 0.48 for class A and 0.52 for class B.In this case, the original label will be kept.
+local average of $0.6$ (logit $m_{i,1} = 0.4054$) for class A and $0.4$ 
+(logit $m_{i,2} = -0.4054$) for class B. This is an outlier classified as class B in the midst of a set of pixels of class A. Suppose a local variance of logits to be $s^2_{i,1} = 5$ for class A and $s^2_{i,2} = 10$ and for class B. This difference is to be expected if the local variability of class A is smaller than that of class B. To complete the estimate, we need to set the parameter $\sigma^2_{k}$, representing prior belief in the variability of the probability values for each class. If we take both  $\sigma^2_{A}$ for class A and $\sigma^2_{B}$ for class B to be both 10, the Bayesian  estimated probability for class A is $0.52$  and for class B is $0.48$. In this case, the pixel will be relabeled as being class A. If we set $\sigma^2$ to be 5 for both classes A and B, the Bayesian probability estimate will be $0.48$ for class A and $0.52$ for class B. In this case, the original class will be kept.
 
 ## Defining the neighbourhood
 
 The underlying principle of Bayesian smoothing is that regions with similar characteristics typically have a dominant class, characterized by higher average probabilities and lower variance compared to other classes. In such areas, a pixel belonging to a different class is expected to exhibit lower average probabilities and higher local variance. Consequently, post-processing should alter the class of this pixel to match the dominant class.
 
-Classification challenges arise when pixels are situated along the boundaries between areas containing different classes, as they possess signatures of two classes. To ensure the reliability of local class statistics, only pixels with a high likelihood of belonging to the class should be included. In the context of spatial neighbourhoods centred on border pixels, only a portion of the pixels in the window share the same class as the central pixel, while the others belong to a different class. To account for border pixels, we use a specialized definition of a neighbourhood to estimate the prior class distribution.
+Classification challenges arise when pixels are situated along the boundaries between areas containing different classes, as they possess signatures of two classes. To ensure the reliability of local class statistics, only pixels with a high likelihood of belonging to the class should be included. In the context of spatial neighborhoods centered on border pixels, only a portion of the pixels in the window share the same class as the central pixel, while the others belong to a different class. To account for border pixels, we use a specialized definition of a neighborhood to estimate the prior class distribution.
 
-To approximate the prior distribution using spatial neighbourhoods, the algorithm uses pixels with high probability of belonging to the class. The rationale is that pixels with low probabilities are unlikely to be part of the same class distribution as those with high probability values. This procedure ensures a more reliable estimation of the prior.
+To approximate the prior distribution using spatial neighborhoods, the algorithm uses pixels with high probability of belonging to the class. The rationale is that pixels with low probabilities are unlikely to be part of the same class distribution as those with high probability values. This procedure ensures a more reliable estimation of the prior.
 
 
 
@@ -293,7 +321,11 @@ To approximate the prior distribution using spatial neighbourhoods, the algorith
 
 ## Reading a probability data cube
  
-The input for post-classification is an image with probabilities produced by a machine learning algorithm. This file should be multi-band, where each band contains the pixel probabilities of a single class; it should be GDAL-readable with INT2S data type with values ranging  from [0..10000]. The file name should have information on reference dates and include a version number. In the examples, we use a file produced by a random forests algorithm applied to a data cube of Sentinel-2 images for tile "20LLQ" in the period 2020-06-04 to 2021-08-26.
+The input for post-classification is an image with probabilities produced by a machine learning algorithm. This file should be multi-band, where each band contains the pixel probabilities of a single class; it should be GDAL-readable with INT2S data type with values ranging  from [0..10000].
+<!--
+%PEDRO: como sao numeros inteiros, acho melhor explicar que o 10000 representa 100%, e' isto?
+-->
+The file name must have information on reference dates and include a version number. In the examples, we use a file produced by a random forests algorithm applied to a data cube of Sentinel-2 images for tile "20LLQ" in the period 2020-06-04 to 2021-08-26.
 
 ```{r, echo = TRUE, eval = TRUE}
 data_dir <- system.file("/extdata/Rondonia-20LLQ/", package = "sitsdata")
@@ -307,7 +339,7 @@ labels <- c("Water", "ClearCut_Burn", "ClearCut_Soil",
             "ClearCut_Veg", "Forest", "Wetland")
 ```
 
-The following code creates a data cube object describing the probability file. This is done by \code{sits_cube()} whose main parameters are: (a) \code{source}: data provider, e.g.,  "AWS" or "MPC"; (b)\code{collection}, image collection, e.g., "SENTINEL-2-L2A" (collection from MPC); (c)\code{data_dir}, directory where the image is stored; (d)\code{bands}; band names, in this case \code{probs};  (e) \code{labels}, labels of the training classes; (f) \code{parse_info}, a vector that shows how to extract `tile`, `band`, `date` and `version` from the file name. It includes designators such as `X1` and `X2` which are place holders for parts of the file name that are not relevant.
+The following code creates a data cube object describing the probability file. This is done by \code{sits_cube()} whose main parameters are: (a) \code{source}: data provider, e.g.,  "AWS" or "MPC"; (b) \code{collection}, image collection, e.g., "SENTINEL-2-L2A" (collection from MPC); (c) \code{data_dir}, directory where the image is stored; (d) \code{bands}; band names, in this case \code{probs};  (e) \code{labels}, labels of the training classes; (f) \code{parse_info}, a vector that shows how to extract `tile`, `band`, `date`, and `version` from the file name. It includes designators such as `X1` and `X2`, which are place holders for parts of the file name that are not relevant.
 
 ```{r, echo=TRUE, eval=TRUE}
 probs_cube <- sits_cube( 
@@ -320,13 +352,13 @@ probs_cube <- sits_cube(
   data_dir = data_dir)
 ```
 
-The output is a tibble with metadata about the probability layers. Figure \@ref(fig:pcube) shows the layers of the data cube. The map for class \code{Forest} shows high probability values associated with compact patches and linear stretches in riparian areas. Class \code{ClearCut_Soil} is mostly composed of dense areas of high probability whose geometrical boundaries result from forest cuts. By contrast, the probability maps for classes \code{Water}, \code{ClearCut_Burn} and \code{ClearCut_Veg} have mostly low values. 
+The output is a tibble with metadata about the probability layers. Figure \@ref(fig:pcube) shows the layers of the data cube. The map for class \code{Forest} shows high probability values associated with compact patches and linear stretches in riparian areas. Class \code{ClearCut_Soil} is mostly composed of dense areas of high probability whose geometrical boundaries result from forest cuts. By contrast, the probability maps for classes \code{Water}, \code{ClearCut_Burn}, and \code{ClearCut_Veg} have mostly low values. 
 
 ```{r pcube, width = 8, tidy="styler", fig.align = 'center', fig.cap = "Class probabilities produced by random forest algorithm."}
 plot(probs_cube)
 ```
 
-The non-smoothed labelled map shows the need for post-processing. This map is obtained by taking the class of higher probability for each pixel as its label without considering the spatial context. This is done by \code{sits_label_classification()} whose main parameters are: (a) \code{cube}, a probability cube; (b) \code{output_dir}, directory for storing results; (c) \code{version}. 
+The non-smoothed labeled map shows the need for post-processing. This map is obtained by taking the class of higher probability to each pixel, without considering the spatial context. This is done by \code{sits_label_classification()} whose main parameters are: (a) \code{cube}, a probability cube; (b) \code{output_dir}, directory for storing results; (c) \code{version}. 
 ```{r, echo=TRUE, eval=TRUE}
 label_cube_no_smooth <- sits_label_classification(
     cube = probs_cube,
@@ -343,7 +375,7 @@ plot(label_cube_no_smooth)
 
 ## Estimating the local logit variances
 
-The local logit variances correspond to the $s^2_{i,k}$ parameter in the Bayesian inference and are estimated by \code{sits_variance()}. Its main parameters are: (a) \code{cube}, a probability cube; (b) \code{window_size}, dimension of the local neighbourhood; (c) \code{neigh_fraction}, the percentage of pixels in the neighbourhood used to calculate the variance; (d) \code{output_dir}, directory where results will be stored. The example below uses half of the pixels of a 7x7 window to estimate the variance. The chosen pixels will be those with the highest probability pixels to be more representative of the actual class distribution. The output values are the logit variances in the vicinity of each pixel. 
+The local logit variances correspond to the $s^2_{i,k}$ parameter in the Bayesian inference and are estimated by \code{sits_variance()}. Its main parameters are: (a) \code{cube}, a probability cube; (b) \code{window_size}, dimension of the local neighborhood; (c) \code{neigh_fraction}, the percentage of pixels in the neighborhood used to calculate the variance; (d) \code{output_dir}, directory where results will be stored. The example below uses half of the pixels of a $7\times 7$ window to estimate the variance. The chosen pixels will be those with the highest probability pixels to be more representative of the actual class distribution. The output values are the logit variances in the vicinity of each pixel. 
 
 ```{r, echo=TRUE, eval=TRUE}
 var_cube <- sits_variance(
@@ -354,21 +386,21 @@ var_cube <- sits_variance(
 summary(var_cube, only_stats = TRUE)
 ```
 
-The choice of the 7 x 7 window size is a compromise between having enough values to 
+The choice of the $7 \times 7$ window size is a compromise between having enough values to 
 estimate the parameters of a normal distribution and the need to capture local effects 
 for class patches of small sizes. Classes such as \code{Water} and \code{ClearCut_Burn}
 tend to be spatially limited; a bigger window size could result in invalid values for
 their respective normal distributions.
 
-The summary statistics show that most local variance values are low, which is an expected result. Areas of low variance correspond to pixel neighbourhoods of high logit values for one the classes and low logit values for the others. High values of the local variances are relevant in areas of confusion between classes. Figure \@ref(fig:vcube) shows the values of local logit variances for classes \code{ClearCut_Veg} and class \code{Forest}, considering only the 4th quartile of the distribution. Only the top 25% of the values for each class are shown, emphasizing areas of high local variability. 
+The summary statistics show that most local variance values are low, which is an expected result. Areas of low variance correspond to pixel neighborhoods of high logit values for one of the classes and low logit values for the others. High values of the local variances are relevant in areas of confusion between classes. Figure \@ref(fig:vcube) shows the values of local logit variances for classes \code{ClearCut_Veg} and \code{Forest}, considering only the $4^{th}$ quartile of the distribution. Only the top 25% of the values for each class are shown, emphasizing areas of high local variability. 
 
 ```{r vcube, fig.width = 8, tidy="styler", fig.align = 'center', fig.cap = "Logit variance map showing values above the 3rd quartile."}
 plot(var_cube, percentile = 0.75, labels = c("ClearCut_Veg", "Forest"))
 ```
 
-Comparing the logit variance maps of Figure \@ref(fig:vcube) with the probability maps of Figure \@ref(fig:pcube) shows the relevance of expert knowledge. The areas of high probability of class \code{Forest} are mostly made of compact patches; areas of high local variance occur near the borders of these patches. By contrast, class \code{ClearCut_Veg} represents a transition between natural forest areas and places where all trees have been cut, which are associated to class \code{ClearCut_Soil}. Class \code{ClearCut_Veg} has a high spectral variability, since the extent of remaining vegetation after most trees have been removed is not uniform. For this reason, the local variance of class \code{ClearCut_Veg} is mostly patch-based, while that of class \code{Forest} is mostly border-based. 
+Comparing the logit variance maps of Figure \@ref(fig:vcube) with the probability maps of Figure \@ref(fig:pcube) emphasizes the relevance of expert knowledge. The areas of high probability of class \code{Forest} are mostly made of compact patches; areas of high local variance occur near the borders of these patches. By contrast, class \code{ClearCut_Veg} represents a transition between natural forest areas and places where all trees have been cut, which are associated to class \code{ClearCut_Soil}. Class \code{ClearCut_Veg} has a high spectral variability, since the extent of remaining vegetation after most trees have been removed is not uniform. For this reason, the local variance of class \code{ClearCut_Veg} is mostly patch-based, while that of class \code{Forest} is mostly border-based. 
 
-Further insights are provided by Figure \@ref(fig:vhist) which shows the histograms of local variances per class. The values shown correspond to the 4th quartile (top 25% of all values). The distribution of logit variances is uneven between the classes. Class \code{ClearCut_Veg} has a more balanced distribution, while most values in the 4th quartile of the \code{ClearCut_Soil} class have low values. 
+Further insights are provided by Figure \@ref(fig:vhist), which shows the histograms of local variances per class. The values shown correspond to the $4^{th}$ quartile (top 25% of all values). The distribution of logit variances is uneven between the classes. Class \code{ClearCut_Veg} has a more balanced distribution, while most values in the $4^{th}$ quartile of class \code{ClearCut_Soil} have low values. 
 
 ```{r vhist, fig.width = 8, tidy="styler", fig.align = 'center', fig.cap = "Histogram of top quartile of variances of class logits."}
 plot(var_cube, type = "hist")
@@ -376,9 +408,9 @@ plot(var_cube, type = "hist")
 
 ## Applying Bayesian smoothing to remove outliers
 
-To remove the outliers in the classification map, \pkg{sits} uses \code{sits_smooth()}. Its main parameters are: (a) \code{cube}, a probability cube; (b) \code{window_size},  dimension of the local neighbourhood; (c) \code{neigh_fraction}, percentage of pixels in the neighbourhood used to calculate the variance; (d) \code{smoothness}, prior logit variances for each class; (e) \code{output_dir}, directory where results will be stored; (f) \code{version}, a string to distinguish different runs.
+To remove the outliers in the classification map, \pkg{sits} provides \code{sits_smooth()}. Its main parameters are: (a) \code{cube}, a probability cube; (b) \code{window_size},  dimension of the local neighborhood; (c) \code{neigh_fraction}, percentage of pixels in the neighborhood used to calculate the variance; (d) \code{smoothness}, prior logit variances for each class; (e) \code{output_dir}, directory where results will be stored; (f) \code{version}, a string to distinguish different runs.
 
-As discussed above, the effect of the Bayesian estimator depends on the values of the a priori variance $\sigma^2_{k}$ set by the user and of the neighbourhood definition used to compute to local variance $s^2_{i,1}$ for each pixel. To show the effects of different $\sigma^2$ values we consider two cases: (a) setting $\sigma^2$ to a high value close to the maximum value of local logit variance; (b) setting $\sigma^2$ to a lower value close to the minimum value of the 4rd quartile. 
+As discussed above, the effect of the Bayesian estimator depends on the values of the a priori variance $\sigma^2_{k}$ set by the user and the neighborhood definition to compute the local variance $s^2_{i,1}$ for each pixel. To show the effects of different $\sigma^2$ values we consider two cases: (a) setting $\sigma^2$ to a high value close to the maximum value of local logit variance; (b) setting $\sigma^2$ to a lower value close to the minimum value of the $4^{th}$ quartile. 
 
 ```{r, echo=TRUE, eval=TRUE}
 smooth_cube_high <- sits_smooth(
@@ -390,9 +422,9 @@ smooth_cube_high <- sits_smooth(
     version = "smooth_high")
 ```
 
-The impact of Bayesian smoothing can be best captured by producing a labelled map using \code{sits_label_classification()} taking the smoothed image as its input. Figure \@ref(fig:smth1) shows that the outliers and isolated pixels have been removed.
+The impact of Bayesian smoothing can be best captured by producing a labeled map using \code{sits_label_classification()}, taking the smoothed image as its input. Figure \@ref(fig:smth1) shows that the outliers and isolated pixels have been removed.
 
-```{r smth1, fig.width = 6, fig.align = 'center', fig.cap = "Labelled map with smoothing with high smoothness values."}
+```{r smth1, fig.width = 6, fig.align = 'center', fig.cap = "Labeled map with smoothing with high smoothness values."}
 label_cube_smooth_high <- sits_label_classification(
     cube = smooth_cube_high,
     output_dir = tempdir,
@@ -400,7 +432,7 @@ label_cube_smooth_high <- sits_label_classification(
 plot(label_cube_smooth_high)
 ```
 
-In the smoothed map, the outliers have been removed by expanding forest areas. Forests have replaced small corridors of water and soil encircled by trees. This effect is due to the high probability of forest detection in the training data. Compare the smoothing with high values with the smoothing with values close to the minimum value of the 4th quartile of the local variance for each class, as computed below.
+In the smoothed map, the outliers have been removed by expanding \code{Forest} areas. Forests have replaced small corridors of water and soil encircled by trees. This effect is due to the high probability of forest detection in the training data. Compare the smoothing with high values with the smoothing with values close to the minimum value of the $4^{th}$ quartile of the local variance for each class, as computed below.
 
 ```{r, echo=TRUE, eval=TRUE}
 smooth_cube_low <- sits_smooth(
@@ -412,9 +444,9 @@ smooth_cube_low <- sits_smooth(
     version = "smooth_low")
 ```
 
-To see the impact of small $\sigma^2$, we compute the labelled map.
+To see the impact of small $\sigma^2$, we compute the labeled map.
 
-```{r smth2, fig.width = 6, fig.align = 'center', fig.cap = "Labelled map with low smoothing parameters."}
+```{r smth2, fig.width = 6, fig.align = 'center', fig.cap = "Labeled map with low smoothing parameters."}
 label_cube_smooth_low <- sits_label_classification(
     cube = smooth_cube_low,
     output_dir = tempdir,
@@ -440,15 +472,22 @@ dplyr::inner_join(sum1, sum2, by = "class") %>%
 
 In the smoothed map with higher prior variance values, the most frequent classes (\code{ClearCut_Soil} and \code{Forest}) increased their areas at the expense of the others. As shown in Figure \@ref(fig:pcube), these classes occur in more compact patches than the others. In the second smoothed map, there is an increase in the area occupied by the \code{ClearCutVeg} class. This increase is due to the nature of this class, which represents a transition between a natural tropical area and one where all trees have been removed. Depending on the aims and practices of those responsible for deforestation, these areas may either have their tree cover removed completely. There are cases, however, where these places are abandoned and turn into secondary vegetation areas \cite{Uhl1988, Wang2020}. 
 
-This example shows the value of the Bayesian inference procedure compared with smoothing methods such as Gaussian and edge-aware filtering \citep{Schindler2012}. Most post-classification procedures use ad-hoc parameters which are not directly linked to the properties of the data. These parameters are based on the structure of the algorithm (e.g, size of the Gaussian kernel) and cannot easily be defined separately for each class. Bayesian inference allows the expert to control the output.
+This example shows the value of the Bayesian inference procedure compared with smoothing methods such as Gaussian and edge-aware filtering \citep{Schindler2012}. Most post-classification procedures use ad-hoc parameters which are not directly linked to the properties of the data. These parameters are based on the structure of the algorithm (e.g, size of the Gaussian kernel), not being easily defined separately for each class. Bayesian inference allows the expert to control the output.
 
 Based on the experience of the authors with different experts on land use classification, there are two main approaches for setting the $\sigma^2_{k}$ parameter:
     
-1. To increase the neighbourhood influence compared with the probability values for each pixel, set the $\sigma^2_{k}$ parameter with high values (20 or above) and increase the neighbourhood window size. Classes whose probabilities have strong spatial autocorrelation will tend to replace outliers.
+1. Increase the neighborhood influence compared with the probability values for each pixel, setting high values (20 or above) to $\sigma^2_{k}$ and increasing the neighborhood window size. Classes whose probabilities have strong spatial autocorrelation will tend to replace outliers.
 
-2. To reduce the neighbourhood influence compared with the probabilities for each pixel of class $k$, set the $\sigma^2_{k}$ parameter with low values (5 or below) . In this way, classes with low spatial autocorrelation are more likely not to be relabelled.
+2. Reduce the neighborhood influence compared with the probabilities for each pixel of class $k$, setting low values (five or less) to $\sigma^2_{k}$. In this way, classes with low spatial autocorrelation are more likely to keep their original labels.
 
-Consider the case of forest areas and watersheds. If an expert wishes to have compact areas classified as forests without many outliers inside them, she will set the $\sigma^2$ parameter for the class "Forest" to be high. For comparison, to avoid that small watersheds with few similar neighbors being relabeled, it is advisable to avoid a strong influence of the neighbors, setting $\sigma^2$ to be as low as possible. Therefore, choice of $\sigma^2$ depends on the effect intended by the expert in the final classified map. 
+Consider the case of forest areas and watersheds. If an expert wishes to have compact areas classified as forests without many outliers inside them, she will set the $\sigma^2$ parameter for the class  \code{Forest} to be high. For comparison, to avoid that small watersheds with few similar neighbors being relabeled, it is advisable to avoid a strong influence of the neighbors, setting $\sigma^2$ to be as low as possible. Therefore, the choice of $\sigma^2$ depends on the effect intended by the expert in the final classified map. 
+
+<!--
+PEDRO: Eu poderia usar o filtro bayesiano para as situacoes abaixo? Ou isto ficaria a cargo apenas da classificacao?
+1) Computar um "intervalo de confianca" para o total de cada classe de uso da terra para cada ano. a depender do estudo posterior que for realizado com os dados de uso da terra esse intervalo pode ser considerado, verificando se ele pode ter algum efeito significativo no resultado final ou nao.
+
+2) Maximizar/minimizar a area uma determinada classe em detrimento de outras. Por exemplo, suponha que eu queira fazer um PRODES usando o sits. Eu poderia maximizar as areas de desmatamento, minimizando falsos negativos. Assim, um especialista poderia fazer uma validacao visual em cima das areas indicadas como desmatamento resultantes do sits, ao inves de ter que olhar toda a area fora da mascara, como e' feito hoje.
+-->
 
 # Comparison with other methods 
 
